# dsan5800_final

./: README.md  agent.py  build_steam_vector_store.py  clean_dataset.py  database_manager.py  pyproject.toml  report.md  runner.py  steam_scraper.py
backend/: build_steam_vector_store.py  clean_dataset.py  database_manager.py  main.py  runner.py  steam_scraper.py
steam-agent-ui/: index.html  package-lock.json  package.json
steam-agent-ui/src/: App.svelte  build_and_deploy.sh  main.js
