[project]
name = "steam_game_recommendation_system"
version = "0.1.0"
description = "Agentic Steam Game Recommendation System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
